--- a/src/static/css/Footer.module.css
+++ b/src/static/css/Footer.module.css
@@ -1,4 +1,5 @@
 footer {
+    margin-top: 60px;
     background-color: #0D253C;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
