--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -7,77 +7,14 @@
 
 .home-wave-backdrop {
     position: absolute;
-}
-
-/* HOME HEADER */
-
-.home-header {
-    margin: 0 80px;
-    padding-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    color: #386BEE;
-}
-
-.home-header-navigation {
-    /* margin-left: 137px; */
-    /* margin-right: auto; */
-    margin: 0 auto;
-    display: flex;
-    gap: 80px;
-}
-
-.home-header-navigation a {
-    font-family: 'Noto Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 14px;
-    text-decoration: none;
-    color: #636E8D;
-}
-
-.home-header-navigation a:hover {
-    text-decoration-line: underline;
-    color: #386BEE;
-}
-
-.home-header>button {
-    /* padding: 0 24px; */
-    /* height: 48px; */
-    /* border: 1px solid #386BEE; */
-    /* border-radius: 55px; */
-    border: none;
-    background: none;
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-    color: #386BEE;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 14px;
-}
-
-.home-header>button>i {
-    font-size: 20px;
-}
-
-.home-header>button:hover {
-    /* background-color: #386BEE; */
-    /* color: #FFFFFF; */
-    text-decoration-line: underline;
+    top: 0;
+    z-index: 0;
 }
 
 /* HOME WELCOME */
 
 .home-welcome-container {
-    margin: 117px 80px 87px;
+    margin: 77px 80px 87px;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     position: relative;
@@ -413,7 +350,7 @@
 /* HOME SUBSCRIPTION BANNER */
 
 .home-subscription-wrapper {
-    margin: 48px 80px 100px;
+    margin: 48px 80px 0;
     padding-top: 20px;
     overflow: hidden;
 }
