--- a/src/static/css/Login.module.css
+++ b/src/static/css/Login.module.css
@@ -5,30 +5,40 @@
     transform: translate(-50%, -50%);
     background-color: #FFFFFF;
     border-radius: 24px;
-    padding: 48px;
+    padding: 64px 48px 32px;
     text-align: center;
     z-index: 100;
     font-family: 'Montserrat';
     font-style: normal;
+    width: 600px;
+    box-sizing: border-box;
+}
+
+.popup>img {
+    width: 478px;
+    height: 242px;
+    margin-bottom: 40px;
 }
 
 .popup>h3 {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 36px;
+    font-size: 32px;
+    line-height: 32px;
     color: #16181B;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
 }
 
 .popup>p {
+    padding: 0 48px;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #2D4379;
-    margin-bottom: 40px;
+    margin-bottom: 48px;
 }
 
-.popup>button {
+.login {
+    width: 100%;
     padding: 0 24px;
     height: 48px;
     border: none;
@@ -37,12 +47,16 @@
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 16px;
     color: #FFFFFF;
     background-color: #386BEE;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
 }
 
-.popup>button>i {
+.login>i {
     margin-right: 12px;
+    font-size: 24px;
 }
