--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -1,3 +1,5 @@
+/* FEEDBACK CARD */
+
 .feedback-card-container {
     background: rgba(255, 255, 255, 0.95);
     box-shadow: 0px 8px 12px rgba(42, 102, 163, 0.33);
@@ -143,4 +145,84 @@
     text-align: center;
     text-transform: uppercase;
     color: #1FB663;
+}
+
+/* FEEDBACK POPUP */
+
+.feedback-popup-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FFFFFF;
+    border-radius: 24px;
+    padding: 32px;
+    z-index: 100;
+    font-family: 'Montserrat';
+    font-style: normal;
+    width: 600px;
+    box-sizing: border-box;
+}
+
+.feedback-popup-main {
+    display: grid;
+}
+
+.feedback-popup-columns {
+    display: grid;
+    grid-template-columns: min-content auto;
+    gap: 24px;
+}
+
+.feedback-popup-columns i {
+    font-size: 18px;
+}
+
+.feedback-popup-columns h3 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 32px;
+    color: #16181B;
+    margin-bottom: 12px;
+}
+
+.feedback-popup-rating {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-content: space-between;
+    gap: 24px;
+    margin: 32px 0;
+}
+
+.feedback-popup-rating>span {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    color: #2D4379;
+}
+
+.feedback-popup-rating>div {
+    display: flex;
+    gap: 12px;
+}
+
+.feedback-popup-rating i {
+    font-size: 24px;
+}
+
+.feedback-popup-main>textarea {
+    border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
+    border-radius: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    color: rgba(45, 67, 121, 0.6);
+    padding: 19px 32px;
+    height: 86px;
+    resize: none;
+    box-sizing: border-box;
+    margin-bottom: 32px;
 }
