--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -101,6 +101,16 @@ hr {
     margin-right: 8px;
 }
 
+.show-more-container {
+    margin-top: 16px;
+    text-align: center;
+}
+
+.show-more-container i {
+    font-size: 10px;
+    margin-left: 8px;
+}
+
 .loader {
     border: 5px solid #555;
     -webkit-animation: spin 1s linear infinite;
