--- a/src/static/css/articles.css
+++ b/src/static/css/articles.css
@@ -1,3 +1,10 @@
+.articles-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 16px;
+    column-gap: calc((1280px - (300px * 4)) / 3);
+}
+
 .article-card-container {
     width: 300px;
     height: 412px;
