search fix, style changes

--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -60,6 +60,7 @@
         line-height: 14px;
         text-transform: uppercase;
         color: #386BEE;
+        user-select: none;
 
         span {
             width: 32px;
