--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -8,7 +8,9 @@
 .home-wave-backdrop {
     position: absolute;
     top: 0;
-    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: repeat-x;
 }
 
 /* HOME WELCOME */
@@ -68,6 +70,7 @@
 
 .home-categories-container {
     margin: 0 80px 77px;
+    position: relative;
 }
 
 .home-categories-container>p {
