--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -65,6 +65,10 @@
     line-height: 20px;
     color: #2D4379;
     margin-top: 16px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 /* RATING TAG */
