--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -88,3 +88,52 @@
         }
     }
 }
+
+.categories-list-modes {
+    display: flex;
+    gap: 64px;
+    margin: 40px 0;
+
+    input {
+        margin-right: 16px;
+    }
+}
+
+.categories-list-main-category {
+    margin: 40px 0;
+
+    .categories-list-main-category-header {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-bottom: 32px;
+
+        h3 {
+            font-weight: 600;
+            font-size: 22px;
+            line-height: 22px;
+            color: #16181B;
+        }
+
+        span {
+            width: 32px;
+            height: 24px;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 12px;
+            color: #386BEE;
+            border: 1px solid #386BEE;
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-sizing: border-box;
+        }
+    }
+
+    hr {
+        margin: 32px 0;
+    }
+}
