--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -19,6 +19,7 @@ ul {
 
 body {
     font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
     line-height: 1;
 }
 
@@ -145,7 +146,7 @@ hr {
     margin-bottom: 32px;
 }
 
-.wide-search-container>input {
+.wide-search-container input {
     width: 100%;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
@@ -160,7 +161,7 @@ hr {
     color: #B3BBC2;
 }
 
-.wide-search-container>i {
+.wide-search-container i {
     float: right;
     font-size: 18px;
     margin-top: -32px;
